--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,8 @@ html {
 }
 
 body {
-  min-height: 100vh;
-  min-height: 100dvh;
+  /* min-height: 100vh;
+  min-height: 100dvh; */
 }
 
 body.lockScroll {
