add library to test

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,8 @@ html {
 }
 
 body {
-  /* min-height: 100vh;
-  min-height: 100dvh; */
+  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 body.lockScroll {
@@ -40,7 +40,7 @@ body.lockScroll {
 }
 
 body {
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 strong {
