--- a/src/components/PostModal/postModal.module.css
+++ b/src/components/PostModal/postModal.module.css
@@ -24,7 +24,7 @@
   border-radius: var(--rounded-block);
   margin-top: 1rem;
   margin-bottom: 0.5rem;
-  filter: drop-shadow(0 0 0.5rem var(--shadow-color));
+  box-shadow: 0 0 0.5rem var(--shadow-color);
 }
 
 .bg {
