--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -20,7 +20,7 @@
   border-radius: var(--rounded-block);
   margin-top: 1rem;
   margin-bottom: 0.5rem;
-  filter: drop-shadow(0 0 0.5rem var(--shadow-color));
+  box-shadow: 0 0 0.5rem var(--shadow-color);
 }
 
 .back {
