--- a/src/components/Post/Image/simple.module.css
+++ b/src/components/Post/Image/simple.module.css
@@ -10,6 +10,6 @@
   object-position: center;
   width: 100%;
   margin: 0 auto;
-  filter: drop-shadow(0 0 0.5rem var(--shadow-color));
+  box-shadow: 0 0 0.5rem var(--shadow-color);
   max-width: 700px;
 }
