--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -100,7 +100,7 @@
   transition: transform 0.3s;
 }
 
-@media (hover: hover) {
+@media (hover: none) {
   .blogButtonText:hover .blogInner {
     background: transparent;
     color: white;
