--- a/src/components/MDXEntryRow/components/Tag/tag.module.css
+++ b/src/components/MDXEntryRow/components/Tag/tag.module.css
@@ -1,9 +1,8 @@
 .tag {
   padding: 0 0 0 0.5rem;
   font-size: 0.8rem;
-  color: var(--theme-text);
+  color: white;
   border: none;
-  border-left: 1px dashed var(--theme-pill);
   text-decoration: none;
   background: none;
   cursor: pointer;
