--- a/src/components/MDXEntryRow/mdxEntryRow.module.css
+++ b/src/components/MDXEntryRow/mdxEntryRow.module.css
@@ -4,7 +4,7 @@
   position: relative;
 
   z-index: 99;
-  height: 600px;
+  height: 400px;
 }
 
 .col-3 {
@@ -72,14 +72,18 @@
   }
 }
 
-.imageParent {
+.parent {
   position: relative;
-  width: 100%;
-  height: 250px;
-  min-height: 250px;
-  max-height: 250px;
-  z-index: 9;
-  margin-left: -2rem;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.imageParent {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .imageParent.book {
@@ -89,8 +93,8 @@
 .imageParent img {
   object-fit: cover;
   /* Tiny border radius still makes a differnece */
-  border-radius: 18px;
-  box-shadow: 1px 1px 20px 1px var(--shadow-color);
+  /* border-radius: 18px;
+  box-shadow: 1px 1px 20px 1px var(--shadow-color); */
 }
 
 .placeholder {
@@ -102,27 +106,27 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding-top: 1rem;
-  padding-bottom: 3rem;
-  padding-right: 1rem;
-  background: var(--theme-background);
-  margin-left: -2rem;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0.2) 100%
+  );
+  z-index: 1;
   width: 100%;
 }
 
 .a {
   text-decoration: none;
-  color: var(--theme-text);
+  color: white;
   display: flex;
   flex-direction: column;
-  padding-left: 2rem;
   width: 100%;
 }
 
 .h1 {
   margin-bottom: 1rem;
   padding-left: 2rem;
-  margin-left: -1px;
+  padding-right: 2rem;
   font-weight: 600;
   border-left: 3px solid var(--theme-text);
   z-index: 99;
@@ -143,6 +147,7 @@
 .description {
   line-height: 1.4rem;
   padding-left: 2rem;
+  padding-right: 2rem;
   opacity: 0.8;
   font-weight: 200;
   overflow: hidden;
@@ -151,27 +156,11 @@
   -webkit-line-clamp: 3;
 }
 
-.wrapper:nth-child(0) .horizontalLine {
-  border-top: var(--grid-line);
-  position: absolute;
-  border-top: none;
-  width: 100vw;
-  height: 1px;
-  left: 0;
-}
-
-.verticalLine {
-  position: absolute;
-  border-left: var(--grid-line);
-  width: 1px;
-  height: calc(100% + 1rem);
-  top: 0rem;
-}
-
 .metadata {
   display: flex;
   align-items: center;
   padding-top: 0.5rem;
+  padding-right: 2rem;
 }
 
 .viewCount {
@@ -179,8 +168,6 @@
   padding-top: 1rem;
   padding-left: 2rem;
   margin-right: auto;
-
-  color: var(--theme-text-secondary);
 
   display: flex;
   text-align: center;
@@ -208,4 +195,16 @@
 
 .wrapperLoading {
   pointer-events: none;
+}
+
+.blurredOuter {
+  padding: 1rem;
+}
+
+.blurred {
+  backdrop-filter: blur(10px);
+  background: transparent;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
 }
