--- a/src/app/blog/(blogMainGroup)/blog.module.css
+++ b/src/app/blog/(blogMainGroup)/blog.module.css
@@ -18,9 +18,9 @@
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1600px;
   margin: 0 auto;
-  padding: 4rem 0 4rem 2rem;
+  padding: 4rem 2rem 4rem 2rem;
   display: flex;
   column-gap: 1rem;
   row-gap: 1rem;
