more visual improvement

--- a/src/app/blog/(blogMainGroup)/blog.module.css
+++ b/src/app/blog/(blogMainGroup)/blog.module.css
@@ -21,15 +21,21 @@
   max-width: 1600px;
   margin: 0 auto;
   padding: 4rem 2rem 4rem 2rem;
-  display: flex;
-  column-gap: 1rem;
-  row-gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 2rem;
   flex-wrap: wrap;
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 1000px) {
   .wrapper {
-    row-gap: 0;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .wrapper {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
 
