--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -8,10 +8,29 @@
   }
 }
 
+.headWrapper {
+  background: linear-gradient(
+    to bottom,
+    transparent 0%,
+    rgba(0, 0, 0, 0.02) 85%,
+    transparent 95%,
+    transparent 100%
+  );
+  display: block;
+  backdrop-filter: blur(20px);
+  padding: 2rem 4rem 0 4rem;
+  border-radius: 10px;
+  box-shadow: 0 0 60px 3px var(--theme-background);
+  margin-bottom: 2rem;
+  margin-left: -4rem;
+  margin-right: -4rem;
+  /* border: 1px solid var(--theme-background); */
+}
+
 .article {
   max-width: 900px;
   margin: 0 auto;
-  padding: 14rem 2rem 2rem 2rem;
+  padding: 6rem 2rem 2rem 2rem;
   color: var(--theme-text);
   position: relative;
 }
@@ -48,8 +67,81 @@
   height: 500px;
   top: 0;
   z-index: 0;
+  display: flex;
+  container-type: inline-size;
 }
 
 .coverWrapper img {
   object-fit: cover;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.sideFade {
+  pointer-events: none;
+  max-width: 1400px;
+  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to right,
+    var(--theme-background) 0%,
+    transparent 20%,
+    transparent 80%,
+    var(--theme-background) 100%
+  );
+  z-index: 1;
+  opacity: 1;
+  transition: opacity 0.2s;
+}
+
+.diag1Fade {
+  pointer-events: none;
+  max-width: 1400px;
+  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to top right,
+    var(--theme-background) 0%,
+    transparent 30%,
+    transparent 100%
+  );
+  z-index: 1;
+  opacity: 1;
+  transition: opacity 0.2s;
+}
+
+.diag2Fade {
+  pointer-events: none;
+  max-width: 1400px;
+  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to top left,
+    var(--theme-background) 0%,
+    transparent 30%,
+    transparent 100%
+  );
+  z-index: 1;
+  opacity: 1;
+  transition: opacity 0.2s;
+}
+
+@container (max-width: 1300px) {
+  .sideFade,
+  .diag1Fade,
+  .diag2Fade {
+    opacity: 0;
+  }
 }
