--- a/src/components/Cheers/cheers.module.css
+++ b/src/components/Cheers/cheers.module.css
@@ -17,8 +17,7 @@
 .text {
   padding-top: 12px;
   padding-right: 0.2rem;
-  color: var(--theme-text-secondary);
-  opacity: 0.7;
+  color: var(--theme-text);
   font-size: 0.8rem;
   font-weight: 200;
 }
@@ -36,7 +35,6 @@
   transition: transform 0.2s ease-in-out;
   transition-delay: 0;
   color: var(--theme-text-secondary);
-  opacity: 0.6;
   text-shadow: var(--theme-box-shadow-standard);
 }
 
