--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -18,10 +18,9 @@
   );
   display: block;
   backdrop-filter: blur(20px);
-  padding: 2rem 4rem 0 4rem;
+  padding: 2rem 4rem 2rem 4rem;
   border-radius: 10px;
   box-shadow: 0 0 60px 3px var(--theme-background);
-  margin-bottom: 2rem;
   margin-left: -4rem;
   margin-right: -4rem;
   /* border: 1px solid var(--theme-background); */
@@ -30,7 +29,7 @@
 .article {
   max-width: 900px;
   margin: 0 auto;
-  padding: 6rem 2rem 2rem 2rem;
+  padding: 8rem 2rem 2rem 2rem;
   color: var(--theme-text);
   position: relative;
 }
@@ -43,7 +42,7 @@
 }
 
 .back {
-  font-size: 0.9rem;
+  font-size: 1rem;
   text-decoration: none;
   color: var(--theme-text);
   transition: opacity var(--animation);
@@ -136,6 +135,11 @@
   z-index: 1;
   opacity: 1;
   transition: opacity 0.2s;
+}
+
+.bodyText {
+  margin-top: -2rem;
+  position: relative;
 }
 
 @container (max-width: 1300px) {
