--- a/src/app/playground/playground.module.css
+++ b/src/app/playground/playground.module.css
@@ -66,11 +66,12 @@
   overflow-x: scroll;
   position: relative;
   -webkit-overflow-scrolling: touch;
-  background: #282a36;
   color: white;
   padding: 1rem;
   height: 400px;
   border: none;
+  background: #282a36;
+  resize: none;
 }
 
 .codeBlock:focus {
@@ -88,6 +89,6 @@
   }
 
   .codeBlock {
-    height: 200px;
+    height: 300px;
   }
 }
