--- a/src/app/playground/playground.module.css
+++ b/src/app/playground/playground.module.css
@@ -11,7 +11,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
   gap: 1rem;
 }
 
@@ -30,6 +30,16 @@
   overflow: auto;
   height: 400px;
   width: 100%;
+}
+
+:global(.dark) .output {
+  background: repeating-linear-gradient(
+    -45deg,
+    #1a1a1a,
+    #1a1a1a 10px,
+    #141414 10px,
+    #141414 20px
+  );
 }
 
 .input {
@@ -97,6 +107,52 @@
   gap: 1rem;
   text-decoration: none;
   color: var(--theme-text);
+}
+
+.field {
+  padding: 0;
+  color: var(--theme-text);
+  font-size: 1.5rem;
+  border: none;
+  text-align: center;
+  font-weight: 600;
+  margin-bottom: 2rem;
+  background: transparent;
+}
+
+.button {
+  cursor: pointer;
+  color: var(--theme-inverted-text);
+  font-size: 0.8em;
+  border: none;
+  background: transparent;
+  margin-left: auto;
+  font-size: 1rem;
+  padding: 0 1rem;
+  position: relative;
+  width: 3rem;
+  height: 100%;
+  overflow: hidden;
+}
+
+.clicker {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  transition: transform 0.2s ease-in-out;
+}
+
+.clicker.copy {
+  transform: translateY(-1.6rem);
+}
+
+.clicker.clicked {
+  transform: translateY(0.4rem);
 }
 
 @media screen and (max-width: 768px) {
