--- a/src/app/playground/playground.module.css
+++ b/src/app/playground/playground.module.css
@@ -15,6 +15,10 @@
   gap: 1rem;
 }
 
+.wrapper.frameless {
+  padding-top: 2rem;
+}
+
 .output {
   display: flex;
   background: repeating-linear-gradient(
