--- a/src/components/WorkoutGrid/workoutGrid.module.css
+++ b/src/components/WorkoutGrid/workoutGrid.module.css
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .wrapper > * {
