--- a/src/components/MDXEntryRow/components/Tag/tag.module.css
+++ b/src/components/MDXEntryRow/components/Tag/tag.module.css
@@ -1,5 +1,5 @@
 .tag {
-  padding: 0 0 0 0.5rem;
+  padding: 0.5rem 0.75rem;
   font-size: 0.8rem;
   color: white;
   border: none;
@@ -7,4 +7,12 @@
   background: none;
   cursor: pointer;
   font-weight: 200;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px);
+  border-radius: 90px;
+  transition: transform 0.1s;
+}
+
+.tag:hover {
+  transform: scale(1.05);
 }
