--- a/src/components/MDXEntryRow/components/Tags/tags.module.css
+++ b/src/components/MDXEntryRow/components/Tags/tags.module.css
@@ -1,21 +1,14 @@
 .tags {
   display: flex;
-  column-gap: 0.8rem;
-  row-gap: 0.7rem;
+  align-items: center;
+  column-gap: 0.5rem;
+  row-gap: 0.5rem;
   flex-wrap: wrap;
   justify-content: start;
   position: relative;
   margin-top: auto;
-  background: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(10px);
-  padding: 1rem;
+  padding: 1rem 1rem 0.5rem 1rem;
 }
 
 .icon {
-  position: absolute;
-  left: -2px;
-  bottom: -3px;
-  font-size: 5px;
-  color: var(--theme-grid-line-color);
-  opacity: 1;
 }
