--- a/src/components/MDXEntryRow/mdxEntryRow.module.css
+++ b/src/components/MDXEntryRow/mdxEntryRow.module.css
@@ -12,6 +12,10 @@
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
   border-radius: 10px;
   overflow: hidden;
+  filter: grayscale(0.5);
+  transition:
+    filter 0.2s ease-in-out,
+    transform 0.2s ease-in-out;
 }
 
 .wrapper.filler {
@@ -164,6 +168,11 @@
   .wrapper:hover .description {
     filter: brightness(1.3);
   }
+
+  .wrapper:hover {
+    filter: grayscale(0);
+    transform: scale(1.02);
+  }
 }
 
 .loader {
@@ -175,13 +184,44 @@
 }
 
 .blurredOuter {
-  padding: 1rem;
+  padding: 0;
 }
 
 .blurred {
   backdrop-filter: blur(20px);
   background: rgba(150, 150, 150, 0.1);
   padding: 1rem;
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -1200px 0;
+  }
+  100% {
+    background-position: 1200px 0;
+  }
+}
+
+.shimmer {
+  background: linear-gradient(
+    to right,
+    lightgray 0%,
+    darkgray 50%,
+    lightgray 100%
+  );
+  background-size: 1200px 100%;
+  animation-name: shimmer;
+  animation-duration: 20s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: shimmer;
+  animation-timing-function: linear;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 8rem;
+  color: darkgray;
 }
