--- a/src/components/BlogPreview/blogPreview.module.css
+++ b/src/components/BlogPreview/blogPreview.module.css
@@ -108,7 +108,7 @@
 }
 
 .text h1 {
-  font-size: 2rem;
+  font-size: 2.2rem;
   padding-bottom: 0.1rem;
   font-weight: 500;
 }
@@ -142,7 +142,7 @@
 }
 
 .metadata.metadata {
-  font-size: 0.9rem;
+  font-size: 1rem;
   margin-bottom: 1rem;
   opacity: 0.6;
 }
@@ -194,7 +194,7 @@
   }
 
   .text h1 {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .text p {
@@ -203,6 +203,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    margin-bottom: -10px;
   }
 
   .fallback {
